--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: "Ed."
 <div class="introduction">
   <h1>Let's open up the public domain.</h1>
 
-<p>Explore a re-imagined version of Robert Frost's New Hampshire and Abenaki responses to the classic poem. Or jump straight to the demonstrations of what you can do in the public domain. Enjoy!</p>
+<p><img src="images/nh-1.png"
+  alt="Woodcut by JJ Lankers in the 1923 edition">Explore a re-imagined version of Robert Frost's New Hampshire and Abenaki responses to the classic poem. Or jump straight to the demonstrations of what you can do in the public domain. Enjoy!</p>
 </div>
 
 <hr>
