--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "Ed."
   <h1>Let's open up the public domain.</h1>
 
 <p><img src="images/nh-1.png"
-  alt="Woodcut by JJ Lankers in the 1923 edition" align="left">Explore the re-mapped of Robert Frost's New Hampshire and Abenaki responses to the 1923 poem. Then consider what you can do in the public domain. Enjoy!</p>
+  alt="Woodcut by JJ Lankers in the 1923 edition" align="left">Explore a re-mapping of Robert Frost's New Hampshire and Abenaki responses to the 1923 poem. Then consider what you can do in the public domain. Enjoy!</p>
 </div>
 
 <hr>
