new hampshire font, changed title.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: "Dêmos"
+title: "Unclosure."
 ---
 <div class="introduction">
-  <h1>Let's open up the public domain.</h1>
+  <h1>An Act for the Encouragement of Learning.</h1>
 
 <p><img src="images/nh-1.png"
   alt="Woodcut by JJ Lankers in the 1923 edition" align="left">Explore a re-mapping of Robert Frost's New Hampshire and Abenaki responses to the 1923 poem. Then consider what you can do in the public domain. Enjoy!</p>
