--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@ layout: default
 title: "Unclosure."
 ---
 <div class="introduction">
-  <h1>What can you do with, in and for the Public Domain?</h1>
+  <h1>Entry Points.</h1>
 
 <p><img src="images/nh-1.png"
-  alt="Woodcut by JJ Lankers in the 1923 edition" align="left">Explore a re-mapping of Robert Frost's New Hampshire and Abenaki responses to the 1923 poem. Then consider what you can do in the public domain. Enjoy!</p>
+  alt="Woodcut by JJ Lankers in the 1923 edition" align="left"></p>
 </div>
 
-<hr>
-<hr>
-<hr>
-<hr>
-
 <div class="toc">
-  <h2>Entry Points</h2>
+  <h2></h2>
   <ul class="texts">
   {% for item in site.texts %}
 
