--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -10,7 +10,7 @@ title: Storymap
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
     <link type="text/css" rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/demos/assets/css/storymap/storymap.css">
 
 </head>
 <body>
@@ -98,8 +98,8 @@ title: Storymap
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="storymap.js"></script>
-<script type="text/javascript" src="counties.js"></script>
+<script type="text/javascript" src="/demos/assets/js/storymap/storymap.js"></script>
+<script type="text/javascript" src="/demos/assets/js/storymap/counties.js"></script>
 <script type="text/javascript">
     (function () {
         'use strict';
