make storymap css distinct from theme css

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -18,7 +18,7 @@ title: Storymap
 <div class="container-fluid">
     <div class="row">
 
-        <div class="col-sm-9 col-md-7 main">
+        <div class="col-sm-9 col-md-7 storymap-main">
 
             <h1 class="page-header">New Hampshire, A Poem with Notes and Grace Notes by Robert Frost</h1>
 
@@ -88,7 +88,7 @@ title: Storymap
 
         </div>
 
-        <div id="map" class="col-sm-3 col-md-5 sidebar">
+        <div id="map" class="col-sm-3 col-md-5 storymap-sidebar">
 
         </div>
 
