forgot to change storymap.js constructor to point to the renamed div

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -183,7 +183,7 @@ title: Storymap
             saigon: {lat: 10.800194, lon: 106.758974, zoom: 9}
         };
 
-        $('.main').storymap({markers: markers, paths:paths});
+        $('.storymap-main').storymap({markers: markers, paths:paths});
     }());
 </script>
 </body>
