--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ layout: default
 title: "Unclosure."
 ---
 <div class="introduction">
-  <h1>Entry Points.</h1>
+  <h1></h1>
 
-<p><img src="images/nh-1.png"
+<p><img src="images/nhfence.jpg"
   alt="Woodcut by JJ Lankers in the 1923 edition" align="left"></p>
 </div>
 
 <div class="toc">
   <h2></h2>
-  <ul class="texts">
+  <ul style="padding-left: 400px; padding-top: 75px" class="texts">
   {% for item in site.texts %}
 
     <li class="text-title">
