added marker names

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -8,25 +8,20 @@ title: Storymap
 <h1 class="page-header">NEW HAMPSHIRE, A POEM WITH NOTES AND GRACE NOTES</h1>
                 <h2>Robert Frost</h2>
 
-            <section data-place="overview">
+            <section data-place="newhampshire">
                 <p>This is a storymap!</p>
             </section>
 
             <section>
                 <h2>NEW HAMPSHIRE</h2>
-                <p><span data-place="south">I met a lady from the South who said (You won't believe she said it, but she said it): "None of my family ever worked, or had A thing to sell."</span> <span data-place="constantinople">I don't suppose the work Much matters. You may work for all of me. I've seen the time I've had to work myself. The having anything to sell (1) is what Is the disgrace in man or state or nation.</span></p>
+                <p><span data-place="south">I met a lady from the South who said (You won't believe she said it, but she said it): "None of my family ever worked, or had A thing to sell."</span> I don't suppose the work Much matters. You may work for all of me. I've seen the time I've had to work myself. The having anything to sell (1) is what Is the disgrace in man or state or nation.</p>
                 <p>I met a Californian who would Talk California — a state so blessed, He said, in climate none had ever died there A natural death, and Vigilance Committees Had had to organize to stock the graveyards And vindicate the state's humanity. "Just the way Steffanson runs on," I murmured, "About the British Arctic. That's what comes Of being in the market with a climate."</p>
                 <p>1 Cf. page 37, <a href="https://babel.hathitrust.org/cgi/pt?id=uva.x000888807;view=1up;seq=51" target="axehelve">"The Axe-helve."</a></p>
             </section>
                 <p>I met a poet from another state, A zealot full of fluid inspiration, Who in the name of fluid inspiration, But in the best style of bad salesmanship, Angrily tried to make me write a protest (In verse I think) against the Volstead Act. He didn't even offer me a drink Until I asked for one to steady him. This is called having an idea to sell.</p>
                 <p>It never could have happened in New Hampshire.</p>
-<<<<<<< HEAD
-                <p>The only person really soiled with trade I ever stumbled on in old <a href="https://google.com" target="newtab"></a> New Hampshire Was someone who had just come back ashamed From selling things in California. He'd built a noble mansard roof with balls On turrets like Constantinople, deep In woods some ten miles from a railroad station, As if to put forever out of mind The hope of being, as we say, received. I found him standing at the close of day Inside the threshold of his open barn, Like a lone actor on a gloomy stage — And recognized him through the iron grey In which his face was muffled to the eyes As an old boyhood friend, and once indeed A drover with me on the road to Brighton. His farm was "grounds," and not a farm at all; His house among the local sheds and shanties Rose like a factor's at a trading station. And he was rich, and I was still a rascal. I couldn't keep from asking impolitely, Where had he been and what had he been doing?</p>
-            </section>
-=======
                 <p>The only person really soiled with trade I ever stumbled on in old New Hampshire Was someone who had just come back ashamed From selling things in California. He'd built a noble mansard roof with balls On turrets like Constantinople, deep In woods some ten miles from a railroad station, As if to put forever out of mind The hope of being, as we say, received. I found him standing at the close of day Inside the threshold of his open barn, Like a lone actor on a gloomy stage — And recognized him through the iron grey In which his face was muffled to the eyes As an old boyhood friend, and once indeed A drover with me on the road to Brighton. His farm was "grounds," and not a farm at all; His house among the local sheds and shanties Rose like a factor's at a trading station. And he was rich, and I was still a rascal. I couldn't keep from asking impolitely, Where had he been and what had he been doing?</p>
-            
->>>>>>> 0cf30f7393ce0564005292408d7cda334a07a01f
+            </section>
 
             <section  data-place="sanfrancisco">
                 <p>How did he get so? (Rich was understood.) In dealing in "old rags" in San Francisco. Oh it was terrible as well could be. We both of us turned over in our graves.</p>
@@ -50,7 +45,7 @@ title: Storymap
                 <p>1 Cf. page 56, "The Witch of Coos."</p>
             </section>
 
-            <section  data-place="overview">
+            <section  data-place="newhampshire">
                 <p>More than enough land for a specimen You'll say she has, but there there enters in Something else to protect her from herself. There quality (1) makes up for quantity. Not even New Hampshire farms are much for sale. The farm I made my home on in the mountains I had to take by force rather than buy. I caught the owner outdoors by himself Raking up after winter, and I said, "I'm going to put you off this farm: I want it." "Where are you going to put me? In the road?" "I'm going to put you on the farm next to it." "Why won't the farm next to it do for you?" "I like this better." It was really better.</p>
                 <p>Apples? New Hampshire has them, but unsprayed, With no suspicion in stem-end or blossom-end Of vitriol or arsenate of lead, And so not good for anything but cider. Her unpruned grapes are flung like lariats Far up the birches out of reach of man. (2)</p>
                 <p>A state producing precious metals, stones, And — writing; none of these except perhaps The precious literature in quantity Or quality to worry the producer About disposing of it. Do you know, Considering the market, there are more Poems produced than any other thing? (3)</p>
@@ -89,7 +84,7 @@ title: Storymap
                 <p>1 Cf. page 64, " The Pauper Witch of Grafton." 2 Cf. line 27, page 50, "Wild Grapes." * Cf. page 27, "The Star-splitter."</p>
             </section>
 
-            <section data-place="overview">
+            <section data-place="newhampshire">
                 <p>The solid moulding of vast peaks of cloud Behind the pitiful reality Of Lincoln, Lafayette and Liberty? Or some such sense as says how high shall jet The fountain in proportion to the basin? No, none of these has raised me to my throne Of intellectual dissatisfaction, But the sad accident of having seen Our actual mountains given in a map Of early times as twice the height they are — Ten thousand feet instead of only five — Which shows how sad an accident may be. Five thousand is no longer high enough. Whereas I never had a good idea About improving people in the world, Here I am over-fertile in suggestion, And cannot rest from planning day or night How high I'd thrust the peaks in summer snow To tap the upper sky and draw a flow Of frosty night air on the vale below Down from the stars to freeze the dew as starry.</p> 
                 <p>The more the sensibilitist I am The more I seem to want my mountains wild; The way the wiry gang-boss liked the log-jam. (1) After he'd picked the lock and got it started, He dodged a log that lifted like an arm Against the sky to break his back for him, Then came in dancing, skipping, with his life Across the roar and chaos, and the words We saw him say along the zigzag journey Were doubtless as the words we heard him say</p>
                 <p>1 Cf. page 44, "Paul's Wife."</p>
@@ -170,65 +165,69 @@ title: Storymap
             L.marker([34.8, -92.2]).bindTooltip("Arksansas"),
             L.marker([37, -120]).bindTooltip("California"),
             L.marker([75, -90]).bindTooltip("British Arctic"),
-            L.marker([44, -71.5]),
-            L.marker([41.013611, 28.955]),
-            L.marker([44.808889, -71.869444]),
-            L.marker([37.783333, -122.416667]),
-            L.marker([43.703333, -72.288333]),
-            L.marker([42.981389, -70.611389]),
-            L.marker([52.95, -1.15]),
-            L.marker([39.952778, -75.163611]),
-            L.marker([51.234, -0.3318]),
-            L.marker([51, 0]),
-            L.marker([44.468611, -71.183889]),
-            L.marker([43.436389, -71.823333]),
-            L.marker([43.646667, -72.010278]),
-            L.marker([44.894444, -71.495833]),
-            L.marker([42.358056, -71.063611]),
-            L.marker([40.777453, -73.975903]),
-            L.marker([42.374, -71.117]),
-            L.marker([42.788333, -71.200833]),
-            L.marker([44, -72.7]),
-            L.marker([41.272222, -72.334167]),
-            L.marker([60, -95]),
-            L.marker([44.488889, -71.569167]),
-            L.marker([44.877778, -71.514167]),
-            L.marker([42.990833, -71.1425]),
-            L.marker([44.227222, -71.748333]),
-            L.marker([44.146111, -71.79]),
-            L.marker([40.7127, -74.0059]),
-            L.marker([42.990833, -71.463611]),
-            L.marker([44.306111, -71.77]),
-            L.marker([44.271, -71.305]),
-            L.marker([44.791667, -72.582778]),
-            L.marker([42.3, -71.8]),
-            L.marker([42.905833, -72.060833]),
-            L.marker([-13.583333, -172.333333]),
-            L.marker([60, 90]),
-            L.marker([53.416667, -8]),
-            L.marker([51.5, -0.116667]),
-            L.marker([47, 2]),
-            L.marker([43, 12]),
-            L.marker([41.7, -71.5]),
-            L.marker([42.800556, -71.304167]),
-            L.marker([42.838333, -71.146944]),
-            L.marker([43.036111, -71.183333]),
-            L.marker([39, -105.5]),
-            L.marker([42.880556, -71.327222]),
-            L.marker([44.280278, -71.688056]),
-            L.marker([46.5, 9.316667]),
-            L.marker([56.564341, -3.584886]),
-            L.marker([44.034167, -72.063889]),
-            L.marker([44.103953, -72.121759]),
-            L.marker([44.2705, -71.30325]),
-            L.marker([43.924722, -71.891667]),
-            L.marker([43.868889, -71.91]),
-            L.marker([44.024511, -71.830917]),
+            L.marker([44, -71.5]).bindTooltip("New Hampshire"),
+            L.marker([41.013611, 28.955]).bindTooltip("Constantinople/Istanbul"),
+            L.marker([44.808889, -71.869444]).bindTooltip("Brighton, VT"),
+            L.marker([37.783333, -122.416667]).bindTooltip("San Francisco, CA"),
+            L.marker([43.703333, -72.288333]).bindTooltip("Dartmouth College"),
+            L.marker([42.981389, -70.611389]).bindTooltip("Isle of Shoals"),
+            L.marker([52.95, -1.15]).bindTooltip("Nottingham"),
+            L.marker([39.952778, -75.163611]).bindTooltip("Philadelphia"),
+            L.marker([51.234, -0.3318]).bindTooltip("Dorking"),
+            L.marker([51, 0]).bindTooltip("Sussex"),
+            L.marker([44.468611, -71.183889]).bindTooltip("Berlin, NH"),
+            L.marker([43.436389, -71.823333]).bindTooltip("Andover, NH"),
+            L.marker([43.646667, -72.010278]).bindTooltip("Canaan, NH"),
+            L.marker([44.894444, -71.495833]).bindTooltip("Colebrook, NH"),
+            L.marker([42.358056, -71.063611]).bindTooltip("Boston, MA"),
+            L.marker([40.777453, -73.975903]).bindTooltip("American Society for Physical Research"),
+            L.marker([42.374, -71.117]).bindTooltip("Harvard College"),
+            L.marker([42.788333, -71.200833]).bindTooltip("Salem, NH"),
+            L.marker([40, -100]).bindTooltip("The Union"),
+            L.marker([44, -72.7]).bindTooltip("Vermont"),
+            L.marker([41.272222, -72.334167]).bindTooltip("Connecticut River"),
+            L.marker([60, -95]).bindTooltip("Canada"),
+            L.marker([44.488889, -71.569167]).bindTooltip("Lost Nation/Lancaster, NH"),
+            L.marker([44.877778, -71.514167]).bindTooltip("Bungey/Columbia, NH"),
+            L.marker([42.990833, -71.1425]).bindTooltip("Poplin/Fremont, NH"),
+            L.marker([44.227222, -71.748333]).bindTooltip("Franconia, NH"),
+            L.marker([44.146111, -71.79]).bindTooltip("Easton, NH"),
+            L.marker([40.7127, -74.0059]).bindTooltip("New York, NY"),
+            L.marker([42.990833, -71.463611]).bindTooltip("Manchester, NH"),
+            L.marker([44.306111, -71.77]).bindTooltip("Littleton, NH"),
+            L.marker([44.271, -71.305]).bindTooltip("White Mountains"),
+            L.marker([44.791667, -72.582778]).bindTooltip("Green Mountains"),
+            L.marker([42.3, -71.8]).bindTooltip("Massachusetts"),
+            L.marker([42.905833, -72.060833]).bindTooltip("Dublin, NH"),
+            L.marker([-13.583333, -172.333333]).bindTooltip("Samoa"),
+            L.marker([60, 90]).bindTooltip("Russia"),
+            L.marker([53.416667, -8]).bindTooltip("Ireland"),
+            L.marker([51.5, -0.116667]).bindTooltip("England"),
+            L.marker([47, 2]).bindTooltip("France"),
+            L.marker([43, 12]).bindTooltip("Italy"),
+            L.marker([41.7, -71.5]).bindTooltip("Rhode Island"),
+            L.marker([42.800556, -71.304167]).bindTooltip("Windham, NH"),
+            L.marker([42.838333, -71.146944]).bindTooltip("Atkinson, NH"),
+            L.marker([43.036111, -71.183333]).bindTooltip("Raymond, NH"),
+            L.marker([39, -105.5]).bindTooltip("Colorado"),
+            L.marker([42.880556, -71.327222]).bindTooltip("Derry, NH"),
+            L.marker([44.280278, -71.688056]).bindTooltip("Bethlehem, NH"),
+            L.marker([46.5, 9.316667]).bindTooltip("Alps"),
+            L.marker([56.564341, -3.584886]).bindTooltip("Birnam Wood"),
+            L.marker([44.69, -71.3]).bindTooltip("Koas/Coös County"),
+            L.marker([44.034167, -72.063889]).bindTooltip("Haverhill, NH"),
+            L.marker([44.103953, -72.121759]).bindTooltip("Newbury,VT"),
+            L.marker([44.2705, -71.30325]).bindTooltip("Gôdagwajo/Mt. Washington"),
+            L.marker([43.436667, -71.648611]).bindTooltip("Bemijesoak/Pemigewasset River"),
+            L.marker([43.93, -71.84]).bindTooltip("Grafton County"),
+            L.marker([43.924722, -71.891667]).bindTooltip("Warren, NH"),
+            L.marker([43.868889, -71.91]).bindTooltip("Wentworth, NH"),
+            L.marker([44.024511, -71.830917]).bindTooltip("Mt. Moosilauke"),
             L.geoJSON(counties)
         ];
 
         var views = {
-            overview: { lat: 44, lon: -71.5, zoom: 8 },
+            newhampshire: { lat: 44, lon: -71.5, zoom: 8 },
             south: { lat: 33, lon: -88, zoom: 5.5 },
             constantinople: { lat: 41.013611, lon: 28.955, zoom: 8 },
             sanfrancisco: { lat: 37.783333, lon: -122.416667, zoom: 8 },
