made changes to Witch of Coos

--- a/_texts/storymap.html
+++ b/_texts/storymap.html
@@ -101,10 +101,16 @@ title: Storymap
                 <p>He stood on the safe side of the line talking; Which is sheer Matthew Arnoldism, The cult of one who owned himself "a foiled, Circuitous wanderer," and "took dejectedly His seat upon the intellectual throne." Agreed in frowning on these improvised Altars the woods are full of nowadays, Again as in the days when Ahaz sinned By worship under green trees in the open. Scarcely a mile but that I come on one, A black-cheeked stone and stick of rain-washed charcoal. Even to say the groves were God's first temples Comes too near to Ahaz' sin for safety. Nothing not built with hands of course is sacred. But here is not a question of what's sacred; Rather of what to face or run away from. I'd hate to be a runaway from nature. And neither would I choose to be a puke Who cares not what he does in company, And, when he can't do anything, falls back On words, and tries his worst to make words speak Louder than actions, and sometimes achieves it. It seems a narrow choice the age insists on. How about being a good Greek, for instance? That course, they tell me, isn't offered this year. "Come, but this isn't choosing — puke or prude?" Well, if I have to choose one or the other, I choose to be a plain New Hampshire farmer With an income in cash of say a thousand (From say a publisher in New York City). It's restful to arrive at a decision, And restful just to think about New Hampshire. At present I am living in Vermont.</p>
             </section>
 
-            <section data-place="coos">
+            <section>
                 <h1>TWO WITCHES</h1>
-                <h2>I. THE WITCH OF COOS</h2>
-                <p>I circa 1922 staid the night for shelter at a farm Behind the mountain, with a mother and son, Two old-believers. They did all the talking. Mother. Folks think a witch who has familiar spirits She could call up to pass a winter evening, But won't, should be burned at the stake or something. Summoning spirits isn't "Button, button, Who's got the button," I would have them know. Son. Mother can make a common table rear And kick with two legs like an army mule. Mother. And when I've done it, what good have I done? Rather than tip a table for you, let me Tell you what Ralle the Sioux Control once told me. He said the dead had souls, but when I asked him How could that be — I thought the dead were souls, He broke my trance. Don't that make you suspicious That there's something the dead are keeping back? Yes, there's something the dead are keeping back. Son. You wouldn't want to tell him what we have Up attic, mother? Mother. Bones — a skeleton.</p>
+                <h2><span data-place="coos">I. THE WITCH OF <a href=“#note1”>COÖS</a></span></h2>
+                <p>circa 1922</p>
+                <p><span data-place="mtwashington">I staid the night for shelter at a farm<br> Behind the mountain, with a mother and son,<br> Two old-believers. They did all the talking.</span></p> 
+                <p><i>Mother</i>. Folks think a witch who has familiar spirits<br> She could call up to pass a winter evening,<br> But won't, should be burned at the stake or something.<br> Summoning spirits isn't "Button, button,<br> Who's got the button," I would have them know.</p> 
+                <p><i>Son</i>. Mother can make a common table rear<br> And kick with two legs like an army mule.</p> 
+                <p><i>Mother</i>. And when I've done it, what good have I<br> done?<br> Rather than tip a table for you, let me<br> Tell you what Ralle the Sioux Control once told me.<br> He said the dead had souls, but when I asked him<br> How could that be — I thought the dead were souls,<br> He broke my trance. Don't that make you suspicious<br> That there's something the dead are keeping back?<br> Yes, there's something the dead are keeping back.</p> 
+                <p><i>Son</i>. You wouldn't want to tell him what we have<br> Up attic, mother?</p>
+                <p><i>Mother</i>. Bones — a skeleton.</p>
             </section>
 
             <section data-place="coos">
@@ -127,9 +133,16 @@ title: Storymap
                 <p>We were about it one night in the cellar. Son knows the story: but 'twas not for him To tell the truth, suppose the time had come. Son looks surprised to see me end a lie We'd kept all these years between ourselves So as to have it ready for outsiders. But tonight I don't care enough to lie — I don't remember why I ever cared. Toffile, if he were here, I don't believe Could tell you why he ever cared himself . . . She hadn't found the finger-bone she wanted Among the buttons poured out in her lap. I verified the name next morning: Toffile. The rural letter-box said Toffile Lajway.</p>
             </section>
 
-            <section data-place="warren">
-                <h1>II. THE PAUPER WITCH OF GRAFTON</h1>
-                <p>Now that they've got it settled whose I be, I'm going to tell them something they won't like: They've got it settled wrong, and I can prove it. Flattered I must be to have two towns fighting To make a present of me to each other. They don't dispose me, either one of them, To spare them any trouble. Double trouble's Always the witch's motto anyway. I'll double theirs for both of them — you watch me. They'll find they've got the whole thing to do over, That is, if facts is what they want to go by. They set a lot (now don't they?) by a record Of Arthur Amy's having once been up For Hog Reeve in March Meeting here in Warren.</p>
+            <section>
+                <ol>
+                    <li id=“#note1”><p>From Koas, Abenaki for “little white pine tree.” There is still a band of Abenakis from this region who identify as the Koasek/Cowasuck.</p>
+                    <p>The town history of Haverhill, NH gives a sketchy account of the origin of the name Coös, and an even sketchier account of the native peoples who named it. I would note that the historical overview of the Koasek people is riddled with errors, but is interesting for the observations that natives had cleared meadows for farming, ground corn into meal, etc.</p></li>
+                </ol>
+            </section>
+
+            <section>
+                <h1><span data-place="grafton">II. THE PAUPER WITCH OF GRAFTON</span></h1>
+                <p>Now that they've got it settled whose I be, I'm going to tell them something they won't like: They've got it settled wrong, and I can prove it. Flattered I must be to have two towns fighting To make a present of me to each other. They don't dispose me, either one of them, To spare them any trouble. Double trouble's Always the witch's motto anyway. I'll double theirs for both of them — you watch me. They'll find they've got the whole thing to do over, That is, if facts is what they want to go by. <span data-place="warren">They set a lot (now don't they?) by a record Of Arthur Amy's having once been up For Hog Reeve in March Meeting here in Warren.</span></p>
             </section>
 
             <section data-place="wentworth">
@@ -195,7 +208,7 @@ title: Storymap
             L.marker([40.7127, -74.0059]).bindTooltip("New York, NY"),
             L.marker([42.990833, -71.463611]).bindTooltip("Manchester, NH"),
             L.marker([44.306111, -71.77]).bindTooltip("Littleton, NH"),
-            L.marker([44.271, -71.305]).bindTooltip("White Mountains"),
+            L.marker([44.167207, -71.433186]).bindTooltip("White Mountains"),
             L.marker([44.791667, -72.582778]).bindTooltip("Green Mountains"),
             L.marker([42.3, -71.8]).bindTooltip("Massachusetts"),
             L.marker([42.905833, -72.060833]).bindTooltip("Dublin, NH"),
@@ -222,7 +235,7 @@ title: Storymap
             L.marker([43.93, -71.84]).bindTooltip("Grafton County"),
             L.marker([43.924722, -71.891667]).bindTooltip("Warren, NH"),
             L.marker([43.868889, -71.91]).bindTooltip("Wentworth, NH"),
-            L.marker([44.024511, -71.830917]).bindTooltip("Mt. Moosilauke"),
+            L.marker([44.024511, -71.830917]).bindTooltip("Mozalhlaki/Mt. Moosilauke"),
             L.geoJSON(counties)
         ];
 
@@ -241,6 +254,8 @@ title: Storymap
             moosilauke: { lat: 44.024511, lon: -71.830917, zoom: 11 },
             birnam: { lat: 56.564341, lon: -3.584886, zoom: 12 },
             coos: { lat: 44.69, lon: -71.3, zoom: 9 },
+            mtwashington: { lat: 44.2705, lon: -71.30325, zoom: 13 },
+            grafton: { lat: 43.93, lon: -71.84, zoom: 9},
             wentworth: { lat: 43.868889, lon: -71.91, zoom: 11 },
             grafton: { lat: 43.93, lon: -71.84, zoom: 9 },
         };
